--- a/BLAZAMGui/Copyright.razor
+++ b/BLAZAMGui/Copyright.razor
@@ -1,8 +1,9 @@
 ﻿@inherits MudText
 @inject ApplicationInfo ApplicationInfo
 <MudText Class="@Class" 
-     style="cursor:pointer; width:max-content" Color="Color.Tertiary">
-    <MudTooltip ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
+    
+     Style=@("cursor:pointer; width:max-content; "+this.Style) Color="Color.Tertiary">
+    <MudTooltip Arrow=true ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
         BLAZAM&#8482; @DateTime.Now.Year
     </MudTooltip>
 
