Apply app name autosizing to loading page as well

--- a/BLAZAM/Pages/Index.razor
+++ b/BLAZAM/Pages/Index.razor
@@ -13,12 +13,8 @@
 
 <MudContainer Class="py-5">
 
-    <MudText Typo="Typo.h3">
-
-
-        @DatabaseCache.ApplicationSettings?.AppName
-
-    </MudText>
+    <FullAppName/>
+   
 
     <MudText>@Localizer["ApplicationStarting"]</MudText>
     <MudProgressLinear Color="Color.Info" Indeterminate=true />
