--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -94,7 +94,7 @@
     {
         if (username is null || username.IsNullOrEmpty()) return "background-color:#0c13a7";
         int usernameHash = username.GetAppHashCode();
-        byte[] usernameHashBytes = usernameHash.ToByteArray(3);
+        byte[] usernameHashBytes = Helpers.ByteHelpers.ToByteArray(usernameHash, (int?)3);
         string hexColor = "background-color:#";
         hexColor += Convert.ToHexString(usernameHashBytes.Take(3).ToArray());
         return hexColor;
