Warn on navigation

--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -297,6 +297,7 @@
 
                 await AuditLogger.Computer.Changed(Computer, Computer.Changes);
                 EditMode = false;
+                Nav.WarnOnNavigation = false;
                 SnackBarService.Success("The changes made to this computer have been saved.");
                 await RefreshEntryComponents();
             }
