--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -32,6 +32,7 @@
 
 @using BLAZAM
 @using BLAZAM.Jobs
+@using BLAZAM.Nav
 
 @using BLAZAM.ActiveDirectory;
 @using BLAZAM.ActiveDirectory.Interfaces;
