--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -9,7 +9,7 @@
 
 
     <MudStack Row=true>
-        <MudText>
+        <MudText Align="Align.Center">
             Templates
 
         </MudText>
@@ -20,51 +20,100 @@
                        @bind-Value="@SelectedCategory" />
 
         <MudSelectList T="DirectoryTemplate"
-                       Disabled=@(Templates.Count()<1)
+                       Disabled=@(Templates.Where(t=>t.DeletedAt==null).Count()<1)
                        Label="Template"
-                       Values="@Templates"
+                       Values="@Templates.Where(t=>t.DeletedAt==null)"
                        Value="@SelectedTemplate"
                        ValueChanged="@((selected)=>{
                                         SelectedTemplate = selected;
                                         Nav.NavigateTo("/templates/"+selected.Id);
                                         })" />
-
-        <MudTooltip Color=Color.Error
-                    ShowOnHover=@(Templates?.Count() < 1)
+@if (createFirstTemplateTooltipVisible)
+        {
+            <MudTooltip Color
+            =Color.Error
+            ShowOnHover=@(Templates?.Count() < 1)
                     Arrow=true
                     IsVisible=@(createFirstTemplateTooltipVisible)
                     Text="Create your first template">
+          
+
 
             <MudIconButton Color=Color.Tertiary
                            Class="align-middle"
                            OnClick="@(()=>{SelectedTemplate = new();Nav.NavigateTo("/templates");})"
                            Icon="@Icons.Material.Filled.AddCard" />
+           
+        </MudTooltip>
+        }else{
+          <MudTooltip Text="@AppLocalization["New template"]">
+                <MudIconButton Color=Color.Tertiary
+                               Class="align-middle"
+                               OnClick="@(()=>{SelectedTemplate = new();Nav.NavigateTo("/templates");})"
+                               Icon="@Icons.Material.Filled.AddCard" />
 
         </MudTooltip>
-
-
+        }
 
         @if (SelectedCategory != null && SelectedCategory != "All")
         {
-            <MudButton OnClick=@(()=>{RenameModal?.Show();})
-                   Color="Color.Tertiary"
-                   StartIcon="@Icons.Material.Filled.ChangeCircle" />
+            <MudTooltip Text="@AppLocalization["Rename Category"]">
+                <MudIconButton OnClick=@(()=>{RenameModal?.Show();})
+                               Color="Color.Tertiary"
+                               Icon="@Icons.Material.Filled.ChangeCircle" />
+            </MudTooltip>
         }
         @if (SelectedTemplate != null)
         {
-            <MudButton OnClick=@(async()=>{await DuplicateTemplate(SelectedTemplate);}) Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.FileCopy" />
+            <MudTooltip Text="@AppLocalization["Copy template"]">
+
+            <MudIconButton OnClick=@(async()=>{await DuplicateTemplate(SelectedTemplate);}) 
+                Color="Color.Tertiary"
+                Icon="@Icons.Material.Filled.FileCopy" />
+            </MudTooltip>
+            <MudTooltip Text="@AppLocalization["Remove template"]">
+
+                
+                <MudIconButton Color=Color.Error
+                           Class="align-middle"
+                           OnClick="DeleteTemplate"
+                           Icon="@Icons.Material.Filled.Delete" />
+                           </MudTooltip>
         }
 
+        @if (Templates.Any(t => t.DeletedAt != null))
+        {
+            <MudTooltip Text="@AppLocalization["Restore templates"]">
 
+                <MudIconButton OnClick=@(async()=>{RestoreModal.Show();})
+                    Color="Color.Warning"
+                    Icon="@Icons.Material.Filled.RestoreFromTrash" />
+            </MudTooltip>
+        }
     </MudStack>
 
-    <AppModal @ref=RenameModal Title="Rename Category">
+    <AppModal @ref=RenameModal Title=@AppLocalization["Rename Category"]>
 
 
         <MudTextField Label="New Name" @bind-Value=newCategoryName />
 
 
         <MudButton Color="Color.Primary" OnClick="RenameSelectedCategory">Save</MudButton>
+    </AppModal>
+
+    <AppModal YesText="@AppLocalization["Restore"]" OnYes="RestoreSelectedTemplates" @ref=RestoreModal Title=@AppLocalization["Restore Template"]>
+
+        <MudDataGrid @ref=restoreDataGrid Items="Templates.Where(t=>t.DeletedAt!=null)" SelectOnRowClick=true>
+            <Columns>
+                <SelectColumn />
+                <PropertyColumn Property="t=>t.Name"/>
+                <PropertyColumn Property="t=>t.Category"/>
+                    
+            </Columns>
+        </MudDataGrid>
+
+
+
     </AppModal>
 </SetHeader>
 @if (SelectedTemplate != null)
@@ -78,10 +127,12 @@
 @code {
     bool createFirstTemplateTooltipVisible;
     AppModal? RenameModal;
+    AppModal? RestoreModal;
+    MudDataGrid<DirectoryTemplate>? restoreDataGrid;
     string? newCategoryName;
     protected async Task DuplicateTemplate(DirectoryTemplate template)
     {
-        SelectedTemplate = (DirectoryTemplate)template.Clone();
+        SelectedTemplate = (DirectoryTemplate)template.Clone(Context);
         await RefreshComponents();
 
 
@@ -104,6 +155,13 @@
         await RefreshComponents();
 
     }
+    private async Task DeleteTemplate()
+    {
+        SelectedTemplate.DeletedAt = DateTime.Now;
+        await Context.SaveChangesAsync();
+        SelectedTemplate = null;
+        await InvokeAsync(StateHasChanged);
+    }
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
@@ -118,5 +176,24 @@
 
 
         }
+    }
+    private async void RestoreSelectedTemplates()
+    {
+        
+        foreach(var template in restoreDataGrid.SelectedItems)
+        {
+            template.DeletedAt =null;
+            try
+            {
+                Templates.First(t => template.Equals(t)).DeletedAt = null;
+            }
+            catch
+            {
+                //Do nothing, it's a best attempt
+            }
+        }
+        var result  = await Context.SaveChangesAsync();
+        RestoreModal?.Hide();
+        SnackBarService.Success(AppLocalization["Template(s) restored"]);
     }
 }
