--- a/BLAZAM/Pages/Printers/ViewPrinter.razor
+++ b/BLAZAM/Pages/Printers/ViewPrinter.razor
@@ -154,6 +154,7 @@
         {
             await Printer.CommitChangesAsync();
             EditMode = false;
+            Nav.WarnOnNavigation = false;
             SnackBarService.Success("The changes made to this printer have been saved.");
             await RefreshEntryComponents();
 
