--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -490,6 +490,7 @@
 
                     await AuditLogger.User.Changed(User, changes);
                     EditMode = false;
+                    Nav.WarnOnNavigation = false;
                     SnackBarService.Success("The changes made to this user have been saved.");
                 }
                 else
