--- a/BLAZAMGui/UI/OU/MoveToOUModalContent.razor
+++ b/BLAZAMGui/UI/OU/MoveToOUModalContent.razor
@@ -38,7 +38,7 @@
     {
         if (SelectedOU.DN.Equals(DirectoryModel.OU))
         {
-            SnackBarService.Warning(DirectoryModel.CanonicalName + " is aleady in that OU.");
+            SnackBarService.Warning(DirectoryModel.CanonicalName + " is already in that OU.");
             return;
         }
         if (await MessageService.Confirm("Are you sure you want to move this " + DirectoryModel.ObjectType.ToString().ToLower() + " to " + SelectedOU.CanonicalName, "Confirm move"))
