--- a/BLAZAMGui/UI/OU/OUTreeView.razor
+++ b/BLAZAMGui/UI/OU/OUTreeView.razor
@@ -159,7 +159,7 @@
         if (RootOU is null || RootOU.Count < 1)
         {
             TopLevel = new ADOrganizationalUnit();
-            await TopLevel.Parse(Directory.GetDirectoryEntry(), Directory);
+            TopLevel.Parse( directory: Directory,directoryEntry: Directory.GetDirectoryEntry());
             _ = TopLevel.SubOUs;
             RootOU = new HashSet<IADOrganizationalUnit>() { TopLevel };
         }
