--- a/BLAZAMGui/UI/Outputs/ADTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/ADTreeView.razor
@@ -158,7 +158,7 @@
         if (RootOU is null || RootOU.Count < 1)
         {
             TopLevel = new ADOrganizationalUnit();
-            await TopLevel.Parse(Directory.GetDirectoryEntry(), Directory);
+            TopLevel.Parse(directory:Directory, directoryEntry: Directory.GetDirectoryEntry());
             _ = TopLevel.SubOUs;
             RootOU = new HashSet<IDirectoryEntryAdapter>() { TopLevel };
         }
