--- a/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAMGui/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -406,7 +406,7 @@ await ParentTemplateChanged(null);
             SelectedOU = (await Directory.OUs.FindOuByStringAsync(DirectoryTemplate.EffectiveParentOU)).FirstOrDefault();
         if (SelectedOU == null)
         {
-            SelectedOU = await Directory.OUs.GetApplicationRootOU();
+            SelectedOU = Directory.OUs.GetApplicationRootOU();
         }
     }
 
