--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -190,7 +190,7 @@
                                  @if (EditMode && !User.NewEntry)
                                 {
                                     <MudText>
-                                        To Modify the user's name click the Gear button and choose "Rename..."
+                                        To modify the user's name click the rename button in the toolbar/gear menu
                                     </MudText>
                                 }
                             </Section>
@@ -256,7 +256,7 @@
 
 
                                     <MudText>
-                                        To Modify the user's accounts click the Gear button and choose "Rename..."
+                                        To modify the user's accounts click the rename button in the toolbar/gear menu
                                     </MudText>
 
                                 }
