--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -3,23 +3,18 @@
 <MudTextField Label="@AppLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
 
 
-
+@* 
 <MudTextField Label="@AppLocalization["Email Address"]" @bind-Value="@User.Email" Disabled=true />
+ *@
+
+<MudTextField Validation="@(newPassword.IsNullOrEmpty()==false)" Label="@AppLocalization["New Password"]" InputType="InputType.Password" @bind-Value="@newPassword" />
 
 
-<MudTextField Validation="@(newPassword.IsNullOrEmpty()==false)" Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPassword" />
+<MudTextField Immediate=true Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@AppLocalization["Confirm New Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
 
-
-<MudTextField Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
-
-<MudText>
-    @AppLocalization["Require change"]
-</MudText>
-<MudText>
-    Require the user to change their password at next logona
-</MudText>
-
-<MudSwitch T="bool" @ref=requireChangeSwitch />
+<MudTooltip Text=@AppLocalization["Require the user to change their password at next logon"]>
+<MudSwitch T="bool" @ref=requireChangeSwitch>@AppLocalization["Require change"]</MudSwitch>
+    </MudTooltip>
 
 
 
@@ -36,7 +31,6 @@
         Modal.YesText = AppLocalization["Change Password"];
         Modal.Title = "Change Password";
 
-        Modal.YesEnabled = ValidateModal;
     }
 
 
