--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -124,7 +124,7 @@
             Confirm
         </TabContent>
         <ChildContent>
-            <ConfirmNewUser User="@newUser" DirectoryTemplate="SelectedTemplate" Confirmed="UserCreated" />
+            <ConfirmNewUser User="@newUser" DirectoryTemplate="SelectedTemplate" />
 
         </ChildContent>
 
@@ -274,10 +274,7 @@
 
         await InvokeAsync(StateHasChanged);
     }
-    async Task UserCreated(IADUser user)
-    {
-        await AuditLogger.User.Created(user);
-    }
+
     async Task SetTemplate(MudListItem selectedTemplate)
     {
         SelectedTemplate = selectedTemplate.Value as DirectoryTemplate;
